# data-qa-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
.lavish/: s00_data-qa-agent-architecture.html  s01_data-pipeline-refactor-plan.html  s02_sql-editor-tab-plan.html  s03_answer-templates-plan.html  s04_data-agent-restructure-plan.html  s05_data-agent-agnostic-rework-plan.html  s06_smb-data-agent-gtm-plan.html  s07_ui-refresh-plan.html  s08_template-studio-plan.html  s09_aws-deployment-plan.html  s10_streaming-pages-plan.html  s11_google-signin-auth-ticket.html  s12_aws-deployment-cicd-ticket.html  s13_ui-presentation-overhaul-plan.html  s14_eval-loop-plan.html  s15_sandbox-view-redesign-plan.html  s16_golden-object-edit-cascade-plan.html  s17_data-pilot-restyle-plan.html  s19_chronicle-explore-plan.html  s20_chart-object-unification-plan.html  s21_chat-to-golden-promotion.html  s22_golden-object-authoring-plan.html  (+8 more)
dbt/: profiles.yml  (+1 more)
services/backend-api/: Dockerfile  conftest.py  pyproject.toml
services/backend-api/app/: agent_client.py  agent_version.py  auth.py  backfill_titles.py  channel.py  config.py  db.py  limits.py  main.py  waking.py
services/backend-api/app/explore/: engine.py  manifest.py  nl_setup.py  pages_builder.py  service.py
services/backend-api/app/routers/: admin_config.py  ask.py  auth.py  evals.py  events.py  explore.py  feedback.py  goldens.py  profile.py  sql.py
services/backend-api/tests/: test_warming_api.py
services/data-agent/: .dockerignore  Dockerfile  conftest.py  pyproject.toml
services/data-agent/agent/: agent_common.py  analytics.py  chart.py  claude_agent.py  config.py  db.py  embeddings.py  eval_graders.py  eval_judge.py  knowledge.py  llm_agent.py  main.py  memory.py  nl2sql.py  object_builder.py  object_codegen.py  ordinals.py  pages.py  provider.py  report.py  sandbox_agent.py  schema.py  skill_codegen.py  sql_assist.py  sql_guardrails.py  titles.py  tools_explore.py  version.py
services/data-agent/agent/sandbox/: __init__.py  contract.py  errors.py  extract.py  package-lock.json  package.json  pyodide_host.mjs  pyodide_runner.py  runner.py  warmup.mjs
services/data-agent/agent/skills/: __init__.py  analysis.py  charts.py  reporting.py
services/data-agent/knowledge/: INDEX.md  README.md
services/data-agent/knowledge/analysis/: growth-rates.md  latest-month.md  rolling-averages.md  yield.md
services/data-agent/knowledge/domains/_template/: overview.md
services/data-agent/knowledge/domains/property-rent/: bedrooms.md  overview.md
services/data-agent/knowledge/domains/property-sales/: overview.md  property-types.md  segments.md  suburbs-and-postcodes.md
services/data-agent/knowledge/presentation/: comparison-charts.md  one-pass-trend-analysis.md  profile-sections.md  related-metrics.md  report-structure.md  trend-charts.md  what-makes-an-insight.md  when-to-visualise.md
services/data-agent/tests/: test_eval_graders.py  test_fallback_trace.py  test_object_builder.py  test_object_cascade.py  test_ordinals.py  test_pages.py  test_pyodide_sandbox.py  test_registry_sync.py  test_sandbox.py  test_sandbox_errors.py  test_skills.py  test_stream_pages.py  test_version.py
services/data-pipeline/: Dockerfile  ingest.py  pyproject.toml  run.py
services/data-pipeline/dbt/: dbt_project.yml  profiles.yml
services/data-pipeline/dbt/macros/: apply_dataset_rls.sql  generate_schema_name.sql
services/data-pipeline/dbt/models/marts/: _marts.yml  dim_postcode_geo.sql  mart_property_rent.sql  mart_property_sales.sql  mart_property_yield.sql  mart_rent_by_bedroom.sql  mart_rent_growth.sql  mart_rent_summary.sql  mart_sales_by_segment.sql  mart_sales_growth.sql  mart_sales_summary.sql
services/data-pipeline/dbt/models/staging/: _sources.yml  _staging.yml  stg_rent.sql  stg_sales.sql
services/data-pipeline/dbt/seeds/: postcode_geo.csv
services/data-pipeline/dbt/tests/: assert_growth_pct_not_below_negative_100.sql  assert_property_rent_has_coverage.sql  assert_property_rent_unique_postcode_type_bedroom_month.sql  assert_property_sales_has_coverage.sql  assert_property_sales_unique_postcode_suburb_type_band_zoning_month.sql  assert_property_yield_has_coverage.sql  assert_property_yield_range.sql  assert_property_yield_unique_postcode_suburb_type_month.sql  assert_rent_by_bedroom_has_coverage.sql  assert_rent_by_bedroom_unique_postcode_type_bedroom_month.sql  assert_rent_growth_has_coverage.sql  assert_rent_growth_unique_postcode_type.sql  assert_rent_summary_has_coverage.sql  assert_rent_summary_unique_postcode_type_month.sql  assert_sales_by_segment_has_coverage.sql  assert_sales_by_segment_unique_postcode_suburb_type_band_zoning_month.sql  assert_sales_growth_has_coverage.sql  assert_sales_growth_unique_postcode_type.sql  assert_sales_summary_has_coverage.sql  assert_sales_summary_unique_postcode_suburb_type_month.sql  assert_yield_has_coverage.sql  assert_yield_pct_in_sane_range.sql  assert_yield_unique_postcode_type_year.sql
services/db-migrate/: Dockerfile  alembic.ini  entrypoint.sh  load_marts.sql  pyproject.toml  seed_data.py  seed_housing.sql
services/db-migrate/migrations/: env.py  script.py.mako
services/db-migrate/migrations/versions/: 0001_phase0_init.py  0002_property_market.py  0003_agent_memory_grants.py  0004_query_run_tokens.py  0005_staging_schema_grant.py  0006_query_run_source.py  0007_query_run_trace.py  0008_answer_feedback.py  0009_feedback_context.py  0010_query_runs_editor_grant.py  0011_query_run_channel.py  0012_admin_ro_role.py  0013_property_pipeline_lineage_names.py  0014_agent_config.py  0015_template_studio.py  0016_user_plans.py  0017_google_identity.py  0018_statement_timeouts.py  0019_eval_goldens.py  0020_agent_versions.py  0021_eval_runs.py  0022_column_templates_only.py  0023_golden_objects.py  0024_backfill_removed_templates.py  0025_nsw_yield_dataset.py  0026_query_runs_explore_source.py  0027_publish_table_chart.py  0028_dataset_ordinals.py  0029_eval_provenance.py  0030_eval_grader_spec.py
(+234 files in other folders)
