[project]
name = "data-qa-agent"
version = "0.1.0"
description = "Data QA agent — S&P 500 ELT pipeline + LangGraph Q&A agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres>=1.8",
    "langgraph>=1.2.4",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "pyarrow>=16",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3.3",
    "ruff>=0.14.2",
    "pandas-stubs>=2.2",
]
scripts = [
    "lxml>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_qa_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
