[project]
name = "data-qa-agent"
version = "0.1.0"
description = "App that serves data science insights through question and answer"
readme = "README.md"
requires-python = ">=3.12"
# sqlglot: AST-based SQL guardrail (defense-in-depth over the regex denylist and
# the read-only agent_ro role) — imported by services/data-agent's sql_guardrails
# and exercised by tests/, so it lives at the repo root too.
# pydantic: the InsightReport contract (services/data-agent's agent/report.py) is
# exercised by tests/test_report.py, so it lives at the repo root too.
dependencies = ["sqlglot>=25.0", "pydantic>=2.7"]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3.3",
    "pyyaml>=6.0",
    "ruff>=0.14.2",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_qa_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
