[project]
name = "data-agent"
version = "0.1.0"
description = "data-qa-agent data agent: NL to governed SQL over the datasets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
# Real Claude path (Decision G). Enable with: uv sync --extra llm  + set ANTHROPIC_API_KEY.
# Falls back to the deterministic offline stub when absent.
llm = ["pydantic-ai-slim[anthropic]>=0.0.14"]

[dependency-groups]
dev = ["mypy>=1.11", "pytest>=8.3.3", "ruff>=0.14.2"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI dependency-injection uses Depends()/Header() in defaults
