[project]
name = "data-pipeline"
version = "0.1.0"
description = "data-qa-agent pipeline: dlt ingestion (CSV -> raw) + dbt transforms (raw -> marts)"
requires-python = ">=3.12"
dependencies = [
    "dlt[postgres]>=1.4",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
