[project]
name = "db-migrate"
version = "0.1.0"
description = "data-qa-agent database migrations (Alembic) + data seed job"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
